[tool.poetry]
name = "download_google_images"
version = "0.1.0"
description = ""
authors = ["Adarsh1999 <adarshguptamaurya@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
download-google-images = "download_google_images.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.9.0"}
selenium = "^4.0.0"
pillow = "^10.3.0"
requests = "^2.32.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
